# page-replacement-simulator

./: .gitignore  CMakeLists.txt  Projectos.sln  README.md  main.cpp  notes.md  os-group-project.sln  presentation.pptx  report.docx
Projectos/: CMakeLists.txt  Projectos.vcxproj  Projectos.vcxproj.filters  fifo_iterative_replacement_algorithm.cpp  fifo_iterative_replacement_algorithm.h  file_input_retriever.cpp  file_input_retriever.h  first_in_first_out.cpp  first_in_first_out.h  frequency_iterative_algorithm.h  input_file_retriever.cpp  input_retriever.h  inputfile  iterative_replacement_algorithm.cpp  iterative_replacement_algorithm.h  iterative_replacement_algorithm_base.cpp  iterative_replacement_algorithm_base.h  least_frequently_used.cpp  least_frequently_used.h  least_recently_used.cpp  least_recently_used.h  lru_iterative_replacement_algorithm.h  main.cpp  mfu_iterative_replacement_algorithm.h  most_frequently_used.cpp  most_frequently_used.h  optimal.cpp  optimal.h  optimal_iterative_replacement_algorithm.h  page_number.h  page_table_size.h  replace_algorithm.cpp  replacement_algorithm.cpp  replacement_algorithm.h  trace_result.h
include/: fifo_iterative_replacement_algorithm.h  file_input_retriever.h  frequency_iterative_algorithm.h  input_retriever.h  iterative_replacement_algorithm.h  lfu_iterative_replacement_algorithm.h  lru_iterative_replacement_algorithm.h  mfu_iterative_replacement_algorithm.h  optimal_iterative_replacement_algorithm.h  step_result.h
os-group-project/: main.cpp  os-group-project.vcxproj
src/: fifo_iterative_replacement_algorithm.cpp  file_input_retriever.cpp  frequency_iterative_algorithm.cpp  iterative_replacement_algorithm.cpp  lfu_iterative_replacement_algorithm.cpp  lru_iterative_replacement_algorithm.cpp  main.cpp  mfu_iterative_replacement_algorithm.cpp  optimal_iterative_replacement_algorithm.cpp
